# bubblecalc

./: .gitignore  CMakeLists.txt  README.md  bubble.cpp  bubble.hpp  configparser.hpp  consts.hpp  distribution_function.hpp  electron.cpp  electron.hpp  example.ini  main.cpp  test.cpp  typedefs.hpp
src/: CMakeLists.txt  bubble.hpp  configparser.hpp  consts.hpp  distribution_function.hpp  electron.hpp  main.cpp  main.hpp  typedefs.hpp  utils.hpp
